# Splinter

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/manasplice/: cli.py  history.py  paradigm.py
src/splinter/: cli.py  config.py  history.py  splitter.py
tests/: test_cli.py  test_splitter.py
