[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "manasplice"
version = "0.1.1"
description = "Split top-level Python functions into dedicated modules and rewire imports automatically."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "VirtualShowdown" }]
requires-python = ">=3.12"
dependencies = ["colorama>=0.4.6", "libcst>=1.8.6"]

[project.scripts]
manasplice = "manasplice.cli:main"
manasplit = "manasplice.cli:main"

[dependency-groups]
dev = ["mypy>=1.18.0", "pytest>=9.0.3", "ruff>=0.14.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/manasplice"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
files = ["src/manasplice"]
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
disable_error_code = ["import-untyped"]
